# bragi

./: .env.example  .gitattributes  .gitignore  Cargo.toml  readme.md
api/: Cargo.toml
api/src/: handlers.rs
entities/: Cargo.toml
entities/src/: album.rs  artist.rs  mod.rs  prelude.rs  track.rs  user.rs
migration/src/: lib.rs  m20250318_133718_create_artist_table.rs  m20250319_153237_create_album_table.rs  m20250319_153542_create_user_table.rs  m20250319_153613_create_playlist_table.rs  m20250320_162211_create_track_table.rs  m20250510_091903_add_artist_checksum.rs  m20250527_113751_alter_track_number.rs
migrations/2024-12-05-203640_create_artist/: up.sql
migrations/2024-12-05-203705_create_album/: up.sql
migrations/2024-12-05-203733_create_song/: up.sql
scanner/: Cargo.toml
scanner/src/: lib.rs
service/: Cargo.toml
service/src/: album.rs  artist.rs  lib.rs  track.rs
src/: main.rs  schema.rs
src/db/: manager.rs  mod.rs
src/routes/: mod.rs  music.rs
