[package]
name = "Bragi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "entities", "migration", "scanner", "service"]

[dependencies]
dotenvy = "0.15.7"
scanner = { path = "scanner" }
service = { path = "service" }
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
