[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/handlers.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
service = { path = "../service" }
scanner = { path = "../scanner" }
entities = { path = "../entities" }
tokio = "1.44.1"
tokio-util = { version = "0.7.15", features = ["io"] }
